overflow fixed

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  width: 100vw;
+  width: 100%;
   height: 80vh;
   background-color: greenyellow;
   color: black;
