--- a/styles/global.scss
+++ b/styles/global.scss
@@ -12,7 +12,7 @@ $accent: #5dfd08;
 }
 
 body {
-  overflow-x: hidden;
+  // overflow-x: hidden;
   background: $background;
   color: $text;
 }
