--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,6 +1,6 @@
 .home {
   height: 90vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
