--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,6 +1,6 @@
 .nav {
   height: 10vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
